adjust the size of UI

--- a/src/src/assets/reset.css
+++ b/src/src/assets/reset.css
@@ -129,8 +129,8 @@ audio,
 canvas,
 video {
   display: inline-block;
-  *display: inline;
-  *zoom: 1;
+  display: inline;
+  zoom: 1;
 }
 blockquote:before,
 blockquote:after,
